# AdventOfCode2024

Day01/: CHANGELOG.md  Day01.cabal  LICENSE
Day01/src/: Day01.hs  Main.hs
Day01/test/: Main.hs
Day02/: CHANGELOG.md  Day02.cabal
Day02/src/: Day02.hs  Main.hs
Day02/test/: Main.hs
Day03/: CHANGELOG.md  Day03.cabal
Day03/src/: Day03.hs  Main.hs
Day03/test/: Main.hs
