cabal-version:      3.0
name:               Day03
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Matthew Yates
maintainer:         matthew.yates@sainsburys.co.uk
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library Day03-lib
    import:           warnings
    exposed-modules:  Day03
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        attoparsec,
        text

executable Day03
    hs-source-dirs: src
    main-is: Main.hs
    build-depends:
        base ^>=4.18.2.1,
        Day03-lib,
        attoparsec,
        text

test-suite Day03-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        HUnit,
        Day03-lib
